--- a/control.html
+++ b/control.html
@@ -1,12 +1,23 @@
 <html>
 <head>
-<script src="js/jquery.min.js"></script>
-<script src="js/fabric.min.js"></script>
-<script src="js/filesaver.min.js"></script>
-<script src="js/sockets.js"></script>
-<script src="js/control.js"></script>
-<script src="js/viewscreen.js"></script>
-<link rel="stylesheet" href="css/ui.css">
+	 <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/fabric.min.js"></script>
+	<script src="js/filesaver.min.js"></script>
+	<script src="js/sockets.js"></script>
+	<script src="js/control.js"></script>
+	<script src="js/viewscreen.js"></script>
+	<link rel="stylesheet" href="css/ui.css">
 </head>
 	<body>
 		<div id="main">
