--- a/draw.html
+++ b/draw.html
@@ -1,39 +1,69 @@
 <html>
-<head>
-<script src="js/jquery.min.js"></script>
-<script src="js/fabric.min.js"></script>
-<script src="js/sockets.js"></script>
-<script src="js/draw.js"></script>
-<script src="js/viewscreen.js"></script>
-<link rel="stylesheet" href="css/ui.css">
-</head>
-	<body>
-		<div id="main">
-			<div id="canvas-contain">
-				<div id="indicator"></div>
-				<canvas id="c" class="lower-canvas"></canvas>
+  <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/fabric.min.js"></script>
+    <script src="js/sockets.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/viewscreen.js"></script>
+    <link rel="stylesheet" href="css/ui.css" />
+  </head>
+  <body>
+    <div id="main">
+      <iframe
+        id="videoplayer"
+        src="https://player.castr.com/live_b68076901f4911ee97e4df9ed0092eea/realtime"
+        width="100%"
+        style="aspect-ratio: 16/9; min-height: 340px"
+        frameborder="0"
+        scrolling="no"
+        allow="autoplay"
+        allowfullscreen
+        webkitallowfullscreen
+        mozallowfullscreen
+        oallowfullscreen
+        msallowfullscreen
+      ></iframe>
+      <div id="canvas-contain">
+        <div id="indicator"></div>
+        <canvas id="c" class="lower-canvas"></canvas>
+      </div>
+
+      <nav
+        class="navbar bg-dark border-bottom border-bottom-dark"
+        data-bs-theme="dark"
+      >
+
+		<div class="container-fluid justify-content-start">
+			<button id="drawing-mode" class="btn btn-info">
+			Cancel drawing mode
+			</button>
+			<button id="clear-canvas" class="btn btn-danger me-2">Clear</button>
+			<button id="fullscreen" class="btn btn-primary me-2"><i class="bi bi-arrows-fullscreen"></i></button>
+			<button id="op-mode">Enable "Single Page Operation" Mode</button>
+			<input type="color" id="drawing-color" />
+
+			<select id="drawing-mode-selector">
+				<option>Pencil</option>
+			</select>
+			<span class="info" id="line-info"></span>
+			<input type="range" min="1" max="5" id="drawing-line-width" /><br />
 			</div>
 
-			<div style="display: inline-block; margin-left: 10px">
-				<button id="drawing-mode" class="btn btn-info">Cancel drawing mode</button><br>
-				<button id="clear-canvas" class="btn btn-info">Clear</button><br>
-				<br>
-				<button id="fullscreen">Fullscreen</button><br>
-				<br>
-				<button id="op-mode">Enable "Single Page Operation" Mode</button><br>
-
-				<div id="drawing-mode-options">
-					<label id="mode" for="drawing-mode-selector">Mode:</label>
-					<select id="drawing-mode-selector">
-						<option>Pencil</option>
-					</select>
-
-					<label for="drawing-color">Line color:</label>
-					<input type="color" id="drawing-color"><br>
-					<label for="drawing-line-width">Brush size:</label>
-					<span class="info" id="line-info"></span><input type="range" min="1" max="5" id="drawing-line-width"><br>
-				</div>
-			</div>
 		</div>
-	</body>
+       
+      </nav>
+    </div>
+  </body>
 </html>
