--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <html>
-<head>
-	<link rel="stylesheet" href="css/landing.css">
-</head>
+  <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/landing.css" />
+  </head>
 
-<body>
-	<h1>Dewdle</h1>
-	<p>A simple telestrator for streaming and broadcast.</p>
+  <body>
+    <h1>Dewdle</h1>
+    <p>A simple telestrator for streaming and broadcast.</p>
 
-	<h2>Application Pages</h2>
-	<p>
-		<a href="./draw" target="_blank">Draw</a>
-		<a href="./control" target="_blank">Control</a>
-		<a href="./render" target="_blank">Render</a>
-	</p>
+    <h2>Application Pages</h2>
+    <p>
+      <a href="./draw" target="_blank">Draw</a>
+      <a href="./control" target="_blank">Control</a>
+      <a href="./render" target="_blank">Render</a>
+    </p>
 
-	<h2>Other Pages</h2>
-	<p>
-		<a href="https://github.com/vreelb/dewdle" target="_blank" rel="noreferrer">Project Page</a>
-		<a href="https://github.com/vreelb/dewdle/issues" target="_blank" rel="noreferrer">Issue Tracker</a>
-	</p>
-</body>
+    <h2>Other Pages</h2>
+    <p>
+      <a
+        href="https://github.com/vreelb/dewdle"
+        target="_blank"
+        rel="noreferrer"
+        >Project Page</a
+      >
+      <a
+        href="https://github.com/vreelb/dewdle/issues"
+        target="_blank"
+        rel="noreferrer"
+        >Issue Tracker</a
+      >
+    </p>
+  </body>
 </html>
