Moved whep client files into js

--- a/draw.html
+++ b/draw.html
@@ -60,7 +60,7 @@
 
 
 <script type="module">
-	import WHEPClient from './whep/WHEPClient.js';
+	import WHEPClient from './js/WHEPClient.js';
 
 	const url = 'https://customer-wc3mwn2a71cwuddc.cloudflarestream.com/d9442d717a2cc13f087b37750421e5a1/webRTC/play';
 	const videoElement = document.getElementById('videoplayer');
