--- a/control.html
+++ b/control.html
@@ -1,4 +1,4 @@
-<html>
+<html data-bs-theme="dark">
 <head>
 	 <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -26,23 +26,74 @@
 				<canvas id="c" class="lower-canvas"></canvas>
 			</div>
 
-			<div style="display: inline-block; margin-left: 10px">
-				<br>
-				<button id="clear-canvas" class="btn btn-info">Clear</button><br>
-				<br>
-				<label for="drawing-color">Brush color:</label>
-				<input type="color" id="drawing-color"><br>
-				<label for="drawing-line-width">Brush size:</label>
-				<span id="line-info"></span><input type="range" min="1" max="5" id="drawing-line-width"><br>
-				<br>
-				Spacebar controls live status.<br>
-				<br>
-				<button id="save-png" type="button">Save Canvas (as PNG)</button>
-				<button id="save-json" type="button">Save Canvas (as JSON)</button>
-				<br>
-				<br>
-				<input type="text" id="load-json-text" placeholder="Paste JSON data here..."></input>
-				<button id="load-json" type="button">Load Canvas (from JSON)</button>
+			<nav
+				class="navbar bg-dark border-bottom border-bottom-dark"
+				data-bs-theme="dark"
+			>
+
+				<div class="container-fluid justify-content-start">
+				<button id="drawing-mode" class="btn btn-info">
+				Cancel drawing mode
+				</button>
+				<button id="clear-canvas" class="btn btn-danger me-2">Clear</button>
+				<button id="fullscreen" class="btn btn-primary me-2"><i class="bi bi-arrows-fullscreen"></i></button>
+				<button id="op-mode">Enable "Single Page Operation" Mode</button>
+				<input type="color" id="drawing-color" />
+
+				<select id="drawing-mode-selector">
+					<option>Pencil</option>
+				</select>
+				<span class="info" id="line-info"></span>
+				<input type="range" min="1" max="5" id="drawing-line-width" /><br />
+				</div>
+
+				</div>
+			
+			</nav>
+			
+			<div class="container-fluid">
+				<p>Spacebar controls live status.</p>
+
+
+				<div class="card w-75 mb-3">
+					<div class="card-body">
+						<h5 class="card-title">Canvas</h5>
+						<button id="save-png" type="button" class="btn btn-primary">Save Canvas (as PNG)</button>
+						<button id="save-json" type="button" class="btn btn-primary">Save Canvas (as JSON)</button>
+
+						<hr/>
+						<textarea class="form-control" id="load-json-text" rows="3" placeholder="Paste JSON data here..."></textarea>
+						<button id="load-json" type="button" class="btn btn-primary">Load Canvas (from JSON)</button>
+
+					</div>
+				</div>
+
+
+				<div class="card w-75 mb-3">
+					<div class="card-body">
+						<h5 class="card-title">REST API</h5>
+
+						<div class="mb-3">
+							<label for="api-clear" class="form-label">Clear</label>
+							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/clear">
+						</div>
+
+						<div class="mb-3">
+							<label for="api-clear" class="form-label">Telestrator On</label>
+							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/on">
+						</div>
+						<div class="mb-3">
+							<label for="api-clear" class="form-label">Telestrator On</label>
+							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/off">
+						</div>
+						<div class="mb-3">
+							<label for="api-clear" class="form-label">Telestrator Toggle On/Off</label>
+							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/toggle">
+						</div>
+
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</body>
