Added ability to change color via HTTP GET

--- a/control.html
+++ b/control.html
@@ -77,7 +77,6 @@
 							<label for="api-clear" class="form-label">Clear</label>
 							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/clear">
 						</div>
-
 						<div class="mb-3">
 							<label for="api-clear" class="form-label">Telestrator On</label>
 							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/on">
@@ -89,6 +88,10 @@
 						<div class="mb-3">
 							<label for="api-clear" class="form-label">Telestrator Toggle On/Off</label>
 							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/toggle">
+						</div>
+						<div class="mb-3">
+							<label for="api-clear" class="form-label">Color Change</label>
+							<input type="text" class="form-control" id="api-clear" value="https://telestrator.weareatomic.com/color/00ff00">
 						</div>
 
 					</div>
