--- a/draw.html
+++ b/draw.html
@@ -30,7 +30,7 @@
       </div>
 
       <nav
-        class="navbar bg-dark border-bottom border-bottom-dark"
+        class="navbar bg-dark border-bottom border-bottom-dark d-none"
         data-bs-theme="dark"
       >
 
